margin/size adjustments, fixed mobile spacing

--- a/frontend/src/styles/card.scss
+++ b/frontend/src/styles/card.scss
@@ -1,6 +1,6 @@
 .cardStyle {
     width: 30%;
-    height: 600px;
+    height: 500px;
     display: inline-table;
     color: black;
     font-family: Arial;
@@ -15,6 +15,7 @@
 @media only screen and (max-width: 1000px) {
     .cardStyle {
         width: 100%;
+        height: 0%;
     }
 }
 .cardStyleHover {
@@ -22,9 +23,13 @@
     background: #d8ddd8;
 }
 .cardName {
-    font-size: 150%;
+    font-size: 125%;
     text-align: center;
     height: 75px;
+    margin: 1%;
+}
+@media only screen and (max-width: 1000px) {
+    
 }
 .cardLeft {
     width: 50%;
@@ -48,7 +53,15 @@
 }
 .tagBox {
     width: 100%;
-    height: 150px;
+    height: 60px;
+}
+@media only screen and (max-width: 1000px) {
+    .tagBox {
+        height: 0%;
+    }
+    .cardName {
+        height: 0%;
+    }
 }
 .tag{
     color: white;
